build(maven): use Spring Boot parent POM